# GJobs

./: README.md  settings.gradle
app/: build.gradle  google-services.json
app/src/androidTest/java/com/iab/GJobs/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: privacy.html
app/src/main/java/com/iab/GJobs/: DetailActivity.kt  MainActivity.kt  PrivacyPolicy.kt
app/src/main/java/com/iab/GJobs/adapter/: MainActivityRecyclerAdapter.kt
app/src/main/java/com/iab/GJobs/data_model/: DataClasses.kt
app/src/main/java/com/iab/GJobs/services/: FirebaseTokenService.kt  MyFirebaseMessagingService.java  MyFirstFirebaseService.kt
app/src/main/java/com/iab/GJobs/util/: JsonUtil.kt  NativeClass.java  utils.java
app/src/main/jni/: CMakeLists.txt  native_lib.cpp
app/src/main/res/drawable/: back_icon.xml  item_divider.xml  main_side_panel_background.xml  share_job_background.xml  sub_main_pannel_drawable.xml
app/src/main/res/layout/: activity_detail.xml  activity_main.xml  activity_privacy_policy.xml  exit_dialog.xml  main_recycler_item.xml  side_main_panel.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: side_main_panel_scene.xml
app/src/test/java/com/iab/GJobs/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
